--- a/hw-june2022/html/lesson3/css/style1.css
+++ b/hw-june2022/html/lesson3/css/style1.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100px;
     position: absolute;
-    bottom: 360px;
+    top: -20px;
     display: flex;
     justify-content: space-around;
     color: white;
