--- a/hw-june2022/html/lesson4/css/style.css
+++ b/hw-june2022/html/lesson4/css/style.css
@@ -1,28 +1,31 @@
 .ads {
     max-width: 100%;
-    max-height: 800px;
-    border: 2px solid black;
+    max-height: 825px;
+    /*border: 2px solid black;*/
+    text-align: center;
+    font-size: 50px;
     color: white;
-    margin: 5px;
 }
 
 .agnieszka {
     width: 100%;
     height: 200px;
+    /*border: 2px solid black;*/
     background: silver;
-}
-
-h2 {
-    text-align: center;
-    font-size: 50px;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*margin: 10px;*/
 }
 
 .father {
     width: 100%;
     height: 600px;
-    background: #2aeeee;
+    /*border: 2px solid #c41414;*/
+    /*background: #2aeeee;*/
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
 
 }
@@ -30,17 +33,25 @@ h2 {
 .children {
     width: 75%;
     height: 600px;
-    background: mediumvioletred;
+    background: #3f3639;
+    /*margin: 0 10px 10px 10px;*/
 }
 
 .brian {
-
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .connor {
     width: 25%;
-    height: 600px;
+    height: 100%;
     background: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*margin: 0 10px 10px 0;*/
 
 }
 
@@ -51,10 +62,18 @@ h2 {
 
     .children {
         width: 100%;
+        height: 100%;
+    }
+
+    .brian {
+        width: 100%;
+        /*margin: 0 10px;*/
     }
 
     .connor {
         width: 100%;
+        height: 100%;
+        /*margin: 10px;*/
     }
 }
 
@@ -65,6 +84,8 @@ h2 {
 
     .children {
         width: 100%;
+        height: 100%;
+        /*margin: 0 10px ;*/
     }
 
     .agnieszka {
@@ -73,7 +94,9 @@ h2 {
 
     .connor {
         width: 100%;
+        height: 100%;
         background: darkred;
+        /*margin: 10px;*/
     }
 
     .brian {
