--- a/hw-june2022/html/lesson4/css/style.css
+++ b/hw-june2022/html/lesson4/css/style.css
@@ -1,107 +1,90 @@
 .ads {
-    max-width: 100%;
-    max-height: 825px;
-    /*border: 2px solid black;*/
+    width: 100vw;
+    height: 830px;
+    border: 2px solid black;
     text-align: center;
     font-size: 50px;
     color: white;
 }
 
 .agnieszka {
-    width: 100%;
+    max-width: 100%;
     height: 200px;
-    /*border: 2px solid black;*/
+    border-radius: 10px;
     background: silver;
     display: flex;
     justify-content: center;
     align-items: center;
-    /*margin: 10px;*/
+    margin: 10px;
 }
 
-.father {
-    width: 100%;
+.children {
+    max-width: 100%;
     height: 600px;
-    /*border: 2px solid #c41414;*/
-    /*background: #2aeeee;*/
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-
-}
-
-.children {
-    width: 75%;
-    height: 600px;
-    background: #3f3639;
-    /*margin: 0 10px 10px 10px;*/
+    margin: 0 10px 10px 10px;
 }
 
 .brian {
-    height: 100%;
+    width: 75%;
+    height: 600px;
+    border-radius: 10px;
+    background: silver;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 10px;
 }
 
 .connor {
     width: 25%;
     height: 100%;
-    background: green;
+    border-radius: 10px;
+    background: silver;
     display: flex;
     justify-content: center;
     align-items: center;
-    /*margin: 0 10px 10px 0;*/
-
 }
 
 @media screen and (min-width: 600px) and (max-width: 1200px) {
-    .father {
-        flex-direction: column;
-    }
-
     .children {
-        width: 100%;
-        height: 100%;
+        flex-direction: column;
     }
 
     .brian {
         width: 100%;
-        /*margin: 0 10px;*/
+        margin: 0;
     }
 
     .connor {
         width: 100%;
-        height: 100%;
-        /*margin: 10px;*/
+        margin-top: 10px;
     }
 }
 
 @media screen and (min-width: 0px) and (max-width: 600px) {
-    .father {
-        flex-direction: column;
-    }
-
-    .children {
-        width: 100%;
-        height: 100%;
-        /*margin: 0 10px ;*/
-    }
 
     .agnieszka {
         background: #1531c7;
     }
 
-    .connor {
-        width: 100%;
-        height: 100%;
-        background: darkred;
-        /*margin: 10px;*/
+    .children {
+        flex-direction: column;
     }
 
     .brian {
-        height: 100%;
-        background: #3d2b2b;
+        width: 100%;
+        background: darkorange;
+        margin: 0;
+    }
+
+    .connor {
+        width: 100%;
+        background: darkred;
+        margin-top: 10px;
     }
 
 }
