--- a/hw-june2022/js/lesson4/style/style.css
+++ b/hw-june2022/js/lesson4/style/style.css
@@ -1,18 +1,20 @@
 body {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+    border: 1px solid grey;
+    margin: 0 auto;
 }
 
-div {
-    width: 200px;
-    height: 280px;
+.product-card {
+    width: 250px;
+    height: 320px;
 }
 
-h3 {
+.product-title {
     text-align: center;
 }
 
-img {
-    width: 100%;
+.product-image {
+    width: 80%;
 }
